--- a/app.css
+++ b/app.css
@@ -1,10 +1,10 @@
 :root {
-  --bg1: rgba(166, 188, 250, 1);
+  --bg1: rgb(166, 188, 250);
   --bg2: rgb(245, 245, 245);
   --bg3: rgb(33, 87, 242);
   --bg4: rgb(255, 255, 255);
-  --bg5: rgb(166, 188, 250);
-  --col1: rgb(245, 245, 245);
+  --bg5: rgb(217, 217, 217);
+  --col1: rgb(255, 255, 255);
   --col2: rgb(57, 57, 57);
   --col3: rgb(241, 241, 241);
   --col4: rgb(33, 87, 242);
@@ -24,7 +24,7 @@ body {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: var(--bg4);
   color: var(--col2);
 }
@@ -94,35 +94,28 @@ section.container__home {
 }
 
 section #home__bac__1 {
-  width: 50%;
+  width: 49%;
   background-color: var(--bg1);
 }
 
 section #home__bac__2 {
-  width: 50%;
-  background-color: var(--bg2);
+  width: 49%;
+  height: 38.3rem;
+  background-color: var(--bg4);
+  box-shadow: 2px 6px 2px var(--bg5);
 }
 
 section #bac__img__1 {
   position: absolute;
   top: 4.2rem;
-  right: 2.75rem;
+  right: 4.5rem;
 }
 
 section #bac__img__2 {
   position: absolute;
   bottom: 1.9rem;
   right: 1.4rem;
-}
-
-section #bac__img__2 hr {
-  display: none;
-  width: 13.2rem;
-  height: 0.5rem;
-  background-color: rgb(217, 217, 217);
-  border: none;
-  /* box-shadow: 0px 0px 10.0547px rgba(0, 0, 0, 0.05); */
-  margin-right: -1.4rem;
+  z-index: 100;
 }
 
 #home__content {
@@ -135,7 +128,7 @@ section #bac__img__2 hr {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-46%, -54%);
+  transform: translate(-51%, -48%);
   background: linear-gradient(
     146.64deg,
     rgba(255, 255, 255, 0.5) -6.76%,
@@ -145,9 +138,9 @@ section #bac__img__2 hr {
   border-radius: 7.1rem 0;
 }
 
-#home__content img {
-  /* margin: 0; */
-  /* padding: 0; */
+#home__content h1,
+#home__content p {
+  color: var(--col2);
 }
 
 #home__content__cont,
@@ -156,13 +149,19 @@ section #bac__img__2 hr {
   margin: auto;
 }
 
+#home__content img {
+  /* position: absolute;
+  left: 4.5rem; */
+  /* transform: matrix(1, -0.06, 0.06, 1, 0, 0); */
+}
+
 #home__content h1 {
   font-size: 2rem;
   margin-top: 0;
   margin-bottom: 0.7rem;
 }
 
-#home__content__name {
+.name__col {
   color: var(--col4);
 }
 
@@ -211,23 +210,59 @@ section #bac__img__2 hr {
 
 /* Organization Section */
 
-section #org__dept {
-  border: 2px solid brown;
+section#org__logo {
+  width: 18.9rem;
   display: grid;
   grid-template-columns: auto auto;
   grid-column-gap: 0.7rem;
   background-color: var(--bg2);
   margin: 3.2rem;
+  /* margin-bottom: 3.8rem; */
   text-align: center;
 }
 
-/* section #org__dept {
-  border: 1px solid rgb(42, 128, 165);
-} */
-
-section .org__dept__logo {
-  background-color: var(--bg5);
+section .org__dept__logo img {
+  width: 3.4rem;
+  height: 3.4rem;
+  margin-bottom: -1.5rem;
 }
 
-/* section .org__dept__logo img {
-  } */
+section .org__dept__p {
+  height: 5.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-color: var(--bg1);
+  color: var(--col1);
+  /* font-size: 1.1rem; */
+  /* font-weight: 600; */
+  border-radius: 1.3rem;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.15);
+}
+
+/* Projects Section */
+
+section#projects {
+  border: 2px solid brown;
+  display: flex;
+  text-align: center;
+}
+
+section #projects__container__cont h3 {
+  border: 1px solid rgb(42, 128, 165);
+  margin-bottom: 0;
+}
+
+section #projects__container__cont .circle {
+  border: 1px solid rgb(42, 128, 165);
+  width: 0.7rem;
+  height: 0.7rem;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #a6bcfa 0%, #2157f2 100%);
+}
+
+section #projects__container__cont p {
+  display: flex;
+  /* flex-direction: column; */
+  /* border-radius: 2.5rem; */
+}
